# cloud-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml  settings.py
clients/: azure.py  azure_k8s.py
templates/: dashboard.html  index.html  k8s_dashboard.html
