[project]
name = "cloud-monitor"
version = "1.0"
description = "Monitor your cloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.0",
    "azure-mgmt-compute>=34.1.0",
    "azure-mgmt-containerservice>=36.0.0",
    "azure-monitor-query>=1.4.1",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "kubernetes>=32.0.1",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.3",
]
